SSC-XX BLog, fix spacing of separator in blog sidebar

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-blog.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-blog.less
@@ -32,6 +32,10 @@
             margin-bottom: 24px;
         }
     }
+
+    &__sidebar hr {
+        margin: -15px 0;
+    }
 }
 
 @media screen and (max-width: @screen-sm) {
